--- a/ds-in-sb/src/main/resources/application.properties
+++ b/ds-in-sb/src/main/resources/application.properties
@@ -21,3 +21,9 @@ server.servlet.context-path=/api
 springdoc.api-docs.enabled=false
 springdoc.api-docs.path=/api-docs
 springdoc.swagger-ui.path=/swagger-ui
+
+
+#---------------------Http Requests
+downstream.system.hostname=localhost
+downstream.system.port=8080
+downstream.system.baseurl=/api/sys
