--- a/ds-in-sb/src/main/resources/specification.yaml
+++ b/ds-in-sb/src/main/resources/specification.yaml
@@ -6,7 +6,7 @@ servers:
   - url: http://localhost:8080/api
     description: Local Development url
 paths:
-  '/sys/billionaires':
+  '/proc/billionaires':
     get:
       description: Get all billionaires
       responses:
@@ -15,7 +15,32 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/billionairesTypeArr'
+                $ref: '#/components/schemas/procBillionairesTypeArr'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+    post:
+      description: Create new billionaire
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/procBillionaireNoId'
+      responses:
+        '201':
+          description: ''
+          headers:
+            Location:
+              description: path to newly created resource
+              required: true
+              schema:
+                description: path to newly created resource
+                example: >-
+                  http://localhost:8080/api/proc/billionaires/123
+                type: string
         '400':
           description: when request is invalid or incorrect
           content:
@@ -28,9 +53,270 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/errorType'
+  '/proc/billionaires/{id}':
+    get:
+      description: Get billionaire by ID
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/procBillionairesType'
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+    patch:
+      description: Update billionaire by ID
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/procBillionaireNoIdUpdate'
+      responses:
+        '204':
+          description: ''
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+    delete:
+      description: Delete billionaire by ID
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '204':
+          description: ''
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+
+  '/sys/billionaires':
+    get:
+      description: Get all billionaires
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/sysBillionairesTypeArr'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+    post:
+      description: Create new billionaire
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/sysBillionaireNoId'
+      responses:
+        '201':
+          description: ''
+          headers:
+            Location:
+              description: path to newly created resource
+              required: true
+              schema:
+                description: path to newly created resource
+                example: >-
+                  http://localhost:8080/api/sys/billionaires/123
+                type: string
+        '400':
+          description: when request is invalid or incorrect
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+  '/sys/billionaires/{id}':
+    get:
+      description: Get billionaire by ID
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/sysBillionairesType'
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+    patch:
+      description: Update billionaire by ID
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/sysBillionaireNoIdUpdate'
+      responses:
+        '204':
+          description: ''
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+    delete:
+      description: Delete billionaire by ID
+      parameters:
+        - name: id
+          required: true
+          in: path
+          schema:
+            type: string
+      responses:
+        '204':
+          description: ''
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
+        '500':
+          description: ''
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorType'
 components:
   schemas:
-    billionairesType:
+    sysBillionaireNoId:
+      example:
+        first_name: Bill
+        last_name: Gates
+        career: He is CEO of Microsoft
+      type: object
+      required:
+        - first_name
+        - last_name
+        - career
+      properties:
+        first_name:
+          type: string
+        last_name:
+          type: string
+        career:
+          type: string
+    procBillionaireNoId:
+      example:
+        name: Bill Gates
+        career: He is CEO of Microsoft
+      type: object
+      required:
+        - name
+        - career
+      properties:
+        name:
+          type: string
+          pattern: '^[a-zA-Z]+\s[a-zA-Z]+$'
+        career:
+          type: string
+    sysBillionaireNoIdUpdate:
+      example:
+        first_name: Bill
+        last_name: Gates
+        career: He is CEO of Microsoft
+      type: object
+      properties:
+        first_name:
+          type: string
+        last_name:
+          type: string
+        career:
+          type: string
+    procBillionaireNoIdUpdate:
+      example:
+        name: Bill Gates
+        career: He is CEO of Microsoft
+      type: object
+      properties:
+        name:
+          type: string
+          pattern: '^[a-zA-Z]+\s[a-zA-Z]+$'
+        career:
+          type: string
+    procBillionairesType:
       example:
         id: 1
         name: Bill Gates
@@ -38,6 +324,7 @@ components:
       type: object
       required:
         - id
+        - name
         - career
       additionalProperties: true
       properties:
@@ -47,14 +334,46 @@ components:
           type: string
         name:
           type: string
-    billionairesTypeArr:
+          pattern: '^[a-zA-Z]+\s[a-zA-Z]+$'
+    sysBillionairesType:
+      example:
+        id: 1
+        first_name: Bill
+        last_name: Gates
+        career: He is CEO of Microsoft
+      type: object
+      required:
+        - id
+        - first_name
+        - last_name
+        - career
+      additionalProperties: true
+      properties:
+        id:
+          type: number
+        career:
+          type: string
+        first_name:
+          type: string
+        last_name:
+          type: string
+    procBillionairesTypeArr:
       example:
         - id: 1
           name: Bill Gates
           career: He is CEO of Microsoft
       type: array
       items:
-        $ref: '#/components/schemas/billionairesType'
+        $ref: '#/components/schemas/procBillionairesType'
+    sysBillionairesTypeArr:
+      example:
+        - id: 1
+          first_name: Bill
+          last_name: Gates
+          career: He is CEO of Microsoft
+      type: array
+      items:
+        $ref: '#/components/schemas/sysBillionairesType'
     errorType:
       description: This dataType is use for error message
       x-amf-examples:
@@ -143,7 +462,6 @@ components:
         example_41:
           message: bad request
       type: object
-      additionalProperties: true
       properties:
         message:
           type: string
