--- a/ds-in-sb/pom.xml
+++ b/ds-in-sb/pom.xml
@@ -17,7 +17,7 @@
 	<properties>
 		<java.version>11</java.version>
 		<!--<datasonnet.version>1.0.4</datasonnet.version>-->
-		<datasonnet.version>0.3.1-MS3-TEST-SNAPSHOT</datasonnet.version>
+		<datasonnet.version>0.3.1-MS3-SNAPSHOT</datasonnet.version>
 	</properties>
 
 	<dependencies>
